<resources>
    <!-- Name for the application -->
    <string name="app_name">Book Store Inventory</string>

    <!-- Label for overflow menu option that inserts fake book data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <!-- Label for overflow menu option that deletes all book data [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete all entries</string>

    <!-- Title for the activity to add a new book [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_book">Add a Book</string>

    <!-- Title for the activity to edit new book [CHAR LIMIT=20] -->
    <string name="editor_activity_edit_book">Edit Book</string>

    <!-- Toast message for the failure of saving product -->
    <string name="editor_activity_error_saving_new_product">Error saving new product</string>

    <!-- Toast message for the success of saving product -->
    <string name="editor_activity_success_saving_new_product">New product was successfully saved</string>

    <!-- Toast message for the failure of saving updated product -->
    <string name="editor_activity_error_updating_product">Error saving updated product information</string>

    <!-- Toast message for the success of saving  updated product -->
    <string name="editor_activity_success_updating_product">Product information updated</string>

    <!-- Label for editor menu option to save book and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for product information in the editor -->
    <string name="category_product_information">Product Information</string>

    <!-- Label for supplier information in the editor [CHAR LIMIT=30] -->
    <string name="category_supplier_information">Supplier information</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_product_name">Name</string>

    <!-- Text hint for price field in the editor [CHAR LIMIT=30] -->
    <string name="hint_price">Price</string>

    <!-- Text hint for quantity field in the editor [CHAR LIMIT=30] -->
    <string name="hint_quantity">Quantity</string>

    <!-- Text hint for quantity field in the editor [CHAR LIMIT=30] -->
    <string name="hint_supplier_name">Name</string>

    <!-- Text hint for quantity field in the editor [CHAR LIMIT=30] -->
    <string name="hint_phone_number">Phone Number</string>

    <!-- Title text for the empty view, which describes the empty book store [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">Currently we don\'t have any books...</string>

    <!-- Subtitle text for the empty view that prompts the user to add a book [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Get started by adding a book</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current book [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

    <!-- Label for editor overflow menu option that deletes the current book [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Toast message in editor when current product was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_product_successful">Product deleted</string>

    <!-- Toast message in editor when current product has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_product_failed">Error with deleting product</string>

    <!-- Name of the product is mandatory -->
    <string name="editor_enter_product_name">Please enter the name of the product</string>

    <!-- Dialog message to ask the user to confirm deleting the current product [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this product?</string>

    <!-- Dialog button text for the option to confirm deleting the current product [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current product [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

    <!-- Unknown supplier -->
    <string name="unknown_supplier">Unknown Supplier</string>

    <!-- Price -->
    <string name="price">Price: </string>

    <!-- Quantity -->
    <string name="quantity">Quantity: </string>

    <!-- Sale Button -->
    <string name="sale_button">SALE</string>

    <!-- There is no product left -->
    <string name="decrement_is_not_possible">There are no more items</string>

    <!-- Toast invalid number -->
    <string name="toast_invalid_number">This is an invalid number</string>

    <!-- Button Call Supplier -->
    <string name="call_supplier_button">Call supplier</string>

    <!-- Increment Button -->
    <string name="increment_button">+</string>

    <!-- Decrement Button -->
    <string name="decrement_button">-</string>

</resources>
